# hse-proj-monopoly

./: .clang-tidy  .travis.yml  CMakeLists.txt  README.md  monopoly.proto
cmake/: googletest-download.cmake
include/: Board.h  Cards.h  Field.h  Game.h  Manager.h  Menu.h  MonopolyFwd.h  MonopolyThreadManager.h  Player.h  PlayerRequests.h  Random.h  View.h  view.h
include/network/: MonopolyClient.h  MonopolySerialization.h  MonopolyServer.h
include/network/internal/: InternalSerialization.h  MessageFormat.h
include/threads/: BoardModel.h  ModelThreadManager.h
include/view/: BoardModel.h  ButtonManager.h  EventManager.h  SFMLView.h  TooltipManager.h  VectorOps.h
lib/: CMakeLists.txt
src/: Board.cpp  Cards.cpp  Field.cpp  Game.cpp  Manager.cpp  Menu.cpp  MonopolyThreadManager.cpp  Player.cpp  PlayerRequesrs.cpp  Random.cpp  View.cpp  main.cpp  view.cpp
src/network/: MonopolyClient.cpp  MonopolySerialization.cpp  MonopolyServer.cpp
src/network/internal/: InternalSerialization.cpp  MessageFormat.cpp
src/threads/: BoardModel.cpp  ModelThreadManager.cpp
src/view/: BoardModel.cpp  ButtonManager.cpp  EventManager.cpp  SFMLView.cpp  TooltipManager.cpp
test/: CMakeLists.txt  test_fields.cpp  test_serialization.cpp
